// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

// You need to install the CITEXT extension:
// CREATE EXTENSION IF NOT EXISTS citext;
// To remove the CITEXT extension:
// DROP EXTENSION IF EXISTS citext;

Table users {
  id integer [primary key]
  telegram__id bigint unique
  username citext unique
  email citext
  password text [not null]
  created_at timestamp
  version bigint [default: 1]
}

Table films {
  id bigserial [primary key]
  user_id bigint
  title text [not null]
  year int
  genre text
  description text
  rating float
  photo_url text
  comment text
  is_viewed bool [default: false]
  user_rating float
  review text
  created_at timestamp
  updated_at timestamp
}

Ref: films.user_id > users.id

Table collections {
  id bigserial [primary key]
  user_id bigint
  name text [not null]
  description text
  created_at timestamp
  updated_at timestamp
}

Ref: collections.user_id > users.id

Table collection_films {
  collection_id bigint
  film_id bigint
}

Ref: collection_films.collection_id > collections.id
Ref: collection_films.film_id > films.id


Table refresh_tokens {
  id bigserial [primary key]
  token text [not null]
  user_id bigint
  expires_at timestamp [not null]
  revoked bool [default: false]
}

Ref: refresh_tokens.user_id > users.id

Table permissions {
  id bigserial [primary key]
  code text unique [not null]
}


Table user_permissions {
  user_id bigint [not null]
  permissions_id bigint [not null]
}

Ref: user_permissions.user_id > users.id
Ref: user_permissions.permissions_id > permissions.id